@@ -1,6 +1,5 @@
 ##########################################################################
 #  
-#  Copyright (c) 2011, John Haddon. All rights reserved.
 #  Copyright (c) 2011, Image Engine Design Inc. All rights reserved.
 #  
 #  Redistribution and use in source and binary forms, with or without
@@ -35,29 +34,27 @@
 #  
 ##########################################################################
 
-from WidgetTest import WidgetTest
-from MenuTest import MenuTest
-from SplitContainerTest import SplitContainerTest
-from WindowTest import WindowTest
-from ListContainerTest import ListContainerTest
-from EventSignalCombinerTest import EventSignalCombinerTest
-from FrameTest import FrameTest
-from NameGadgetTest import NameGadgetTest
-from LinearContainerTest import LinearContainerTest
-from NodeGadgetTest import NodeGadgetTest
-from GadgetTest import GadgetTest
-from TabbedContainerTest import TabbedContainerTest
-from GraphEditorTest import GraphEditorTest
-from WidgetSignalTest import WidgetSignalTest
-from EventLoopTest import EventLoopTest
-from SplinePlugGadgetTest import SplinePlugGadgetTest
-from TextWidgetTest import TextWidgetTest
-from CheckBoxTest import CheckBoxTest
-from ImageTest import ImageTest
-from ButtonTest import ButtonTest
-from CollapsibleTest import CollapsibleTest
-from ImageGadgetTest import ImageGadgetTest
-from StandardNodeGadgetTest import StandardNodeGadgetTest
+import unittest
 
+import Gaffer
+import GafferUI
+
+class StandardNodeGadgetTest( unittest.TestCase ) :
+
+	def testContents( self ) :
+	
+		n = Gaffer.Node()
+		
+		g = GafferUI.StandardNodeGadget( n )
+		
+		self.failUnless( isinstance( g.getContents(), GafferUI.NameGadget ) )
+		self.assertEqual( g.getContents().getText(), n.getName() )
+		
+		t = GafferUI.TextGadget( "I'll choose my own label thanks" )
+		g.setContents( t )
+		
+		self.failUnless( g.getContents().isSame( t ) )
+		
 if __name__ == "__main__":
 	unittest.main()
+	
